# dr-csi-reg

./: .gitignore  API_REFERENCE.md  API_REFERENCE_NEW.md  CHANGELOG.md  CLEANUP_SUMMARY.md  CONTRIBUTING.md  DOCUMENTATION.md  DOCUMENTATION_NEW.md  FILE_FORMAT_SOLUTIONS.md  LICENSE  Makefile  README.md  RENAMING_SUMMARY.md  UNIT_TEST_SUMMARY.md  batch_process.sh  batch_process_mat_files.py  brainsuite.job  convert_mat_to_nifti.py  convert_nifti_to_mat.py  diagnose_hpc_files.sh  diagnose_mat_format.py  fix_mat_format.py  generate_template.py  invertdeformationfield.py  jacobian.py  main_concat_mat.py  main_make_avi.py  main_mat2nifti.py  main_mat2nifti_patient2_custom.py  main_mat2nifti_patient2_spectral.py  main_mat2nifti_spectral.py  main_nifti2mat.py  main_nifti2mat_patient2_spectral.py  main_nifti2mat_spectral.py  main_register2template.py  main_register2template1.py  main_register2template2.py  main_register2template3.py  main_register2template4.py  main_register2template5.py  (+24 more)
docs/: API_REFERENCE.md  DOCUMENTATION.md  IMPROVEMENTS_SUMMARY.md  REGISTRATION_TUTORIAL.md  REGISTRATION_WORKFLOW.md  TESTING.md
examples/: run_complete_pipeline.py
patient2_output/: metadata.txt
patient2_registration_output/: registration_metadata.txt
scripts/: python3gpu.job
src/: __init__.py  aligner.py  applydeformation.py  composedeformations.py  deformation_utils.py  main_test_phantom.py  nifti_registration_pipeline.py  registration.py  spectral_mat_to_nifti.py  spectral_nifti_to_mat.py  utils.py  warper.py
tests/: __init__.py  test_conversion.py  test_imports.py  (+6 more)
(+1 files in other folders)
