[project]
name = "dr-csi-reg"
version = "1.0.0"
description = "Spectral MRI data registration module for the Diffusion-Relaxation Suite - .mat to NIfTI conversion and nonlinear registration"
authors = ["USC Laboratory"]
license = "MIT"
readme = "README.md"
requires-python = ">=3.11"
keywords = ["diffusion-relaxation", "spectral-mri", "registration", "nifti", "matlab", "medical-imaging", "module"]

dependencies = [
    "scipy",
    "nibabel", 
    "nilearn",
    "SimpleITK",
    "numpy",
    "matplotlib",
    "opencv-python"
]

[project.urls]
repository = "https://github.com/ajoshiusc/dr-csi-reg"
documentation = "docs/DOCUMENTATION.md"

[project.scripts]
convert-mat-to-nifti = "convert_mat_to_nifti:main"
convert-nifti-to-mat = "convert_nifti_to_mat:main" 
register-nifti = "register_nifti:main"

[tool.pylint]
max-line-length = 120
disable = ["C0114", "C0115", "C0116"]  # Missing docstrings for modules, classes, methods

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
